# Gryphon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
dev/: CMakeLists.txt
dev/src/: main.c
examples/: CMakeLists.txt  main.c
include/: gryphon.h
include/base/: profile.h  string8.h
include/gryphon/: gryphon.h
include/gryphon/platform/: x11.h
include/gryphon/render/: shader.h
include/platform/: x11.h
include/render/: renderer.h  shader.h
lib/base/: CMakeLists.txt
lib/base/src/: arena_linux.c
src/: gryphon.c  main.c
src/base/: arena_linux.c  base_math.c  profile.c  string8.c
src/gryphon/: gryphon.c
src/gryphon/platform/: x11.c
src/gryphon/render/: shader.c
src/platform/: x11.c
src/render/: renderer.c  shader.c
tests/: main.c
